--- a/body.tex
+++ b/body.tex
@@ -265,7 +265,7 @@ Standard kalibrering för S-metern är enligt följande skala:
 
 Mottagarbandbredden (RBW) anges i kHz och brusgolvet i dBm (dB relaterat en styrka om 1 mW).
 
-\section{Frekvenser}
+\section{Frekvenser, ej amatörradio}
 
 Dessa frekvenser är avsedda för allmänhet eller för specifika ända\-mål som anges. Det innebär att de kan brukas för de ändamål som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej tillståndspliktiga frekvenser. Observera att du är skyldig att själv kontrollera bestämmelserna innan en frekvens brukas.
 
@@ -568,53 +568,53 @@ Repeater&	FM/C4FM&	SK1BL/R	&Endre	&145.7750	&-600kHz	&1750	&QRV	&JO97FO\\
 \subsection{Repeatrar distrikt 4}
 \footnotesize
 \begin{longtable}{llllrrlcl}
-	\textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
+	\textbf{Funktion}  & \textbf{Typ} & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	\endhead
-	Repeater          & FM           & SK4RWQ        & Arvika/Valfj.       &          434.7750 &          -2MHz & 1750            &       QRV       & JO69ES           \\
-	Repeater          & FM           & SK4UH/R       & Avesta              &          434.8500 &          -2MHz & 1750            &       QRV       & JP80CD           \\
-	Repeater          & FM           & SK4RVN        & Borlänge            &          434.8000 &          -2MHz & 74,4Hz          &       QRV       & JP70RL           \\
-	Hotspot           & D-Star       & SG4UZM-B      & Borlänge            &          434.5500 &     DV Carrier &                 &       QRV       & JP70RM           \\
-	Hotspot           & D-Star       & SG4YPG-B      & Borlänge            &          433.6000 &     DV Carrier &                 &       QRV       & JP70RM           \\
-	Repeater          & D-Star       & SK4BW-B       & Borlänge            &          434.9000 &          -2MHz & DV Carrier      &       QRV       & JP70RJ           \\
-	Hotspot           & D-Star       & SG4AXV-C      & Ekshärad            &          145.4250 &     DV Carrier &                 &       QRV       & JP60RE           \\
-	Repeater          & FM           & SK4AO/R       & Falun               &          145.6250 &        -600kHz & 1750            &       QRV       &  \\
-	Repeater          & FM           & SK4AO/R       & Falun               &          434.6250 &          -2MHz & 1750            &       QRV       & JP70TO           \\
-	Link              & FM           & SK4AV/R       & Filipstad/Klockarh. &          145.2000 &                & Carrier         &       QRV       & JO79CR           \\
-	Repeater          & FM           & SM4EFQ        & Filipstad/Storh.    &          145.7000 &        -600kHz & 1750            &       QRV       & JO79CR           \\
-	Hotspot           & D-Star       & SG4UOF-C      & Glanshammar         &          145.3375 &                & DV Carrier      &       QRV       & JO79RI           \\
-	Repeater          & FM           & SK4IL/R       & Grums               &          434.7250 &          -2MHz & 74,4Hz          &       QRV       & JO69NI           \\
-	Link              & FM           &               & Grängesberg         &          145.4500 &                &                 &       QRV       & JP70LG           \\
-	Repeater          & FM           & SK4HV/R       & Hagfors/Värmullsås. &          145.6750 &        -600kHz & 1750/114,8Hz    &       QRV       & JP60VA           \\
-	Link              & FM           & SK4RJJ        & Hagfors/Värmullsås. &          145.2250 &                & 74,4 Hz         &       QRV       & JP60UA           \\
-	Repeater          & FM           & SK4RKD        & Karlskoga           &          145.7500 &        -600kHz & Carrier         &       QRV       & JO79FJ           \\
-	Hotspot           & D-Star       & SG4BYH        & Karlstad            &          145.3875 &                & DV Carrier      &       QRV       & JO69RK           \\
-	Repeater          & FM           & SK4KS         & K-stad/Kronop.      &          434.8500 &          -2MHz & 1750            &       QRV       & JO69TJ           \\
-	Repeater          & FM           & SK4KIL        & Kil                 &          145.6250 &        -600kHz &                 &       QRV       & JO69QM           \\
-	Repeater          & D-Star       & SG4JPK        & Kil                 &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JO69PM           \\
-	Repeater          & FM           & SK4KIL        & Kil                 &          434.9250 &          -2MHz & 74,4 Hz         &      Plan       & JO69NO           \\
-	Repeater          & FM           & SK4EA/R       & Kopparberg          &          145.6000 &        -600kHz & 1750            &       QRV       & JP79MW           \\
-	Repeater          & FM           & SK4RWP        & Kristinehamn        &          434.7000 &          -2MHz & 1750            &       QRV       & JO79AH           \\
-	Repeater          & FM           & SK4RUV        & Leksand             &          145.7750 &        -600kHz & 1750/85,4Hz     &       QRV       & JP70KQ           \\
-	Repeater          & FM           & SK4EA/R       & Lindesberg          &          145.6875 &        -600kHz & 1750/74,4Hz     &       QRV       & JO79NP           \\
-	Repeater          & FM           & SK4DM/R       & Ludvika             &          145.7250 &        -600kHz & 1750            &       QRV       & JP70NC           \\
-	Repeater          & FM           & SK4DM/R       & Ludvika             &          434.7250 &        -1,6MHz & 1750/DTMF1      &       QRV       & JP70NC           \\
-	Repeater          & FM           & SM4JDP/R      & Mora                &          145.7000 &        -600kHz & 1750/118,8Hz    &       QRV       & JP71DA           \\
-	Repeater          & FM           & SM4JDP        & Mora                &          434.6750 &          -2MHz & 71,9Hz          &       QRV       & JP71GA           \\
-	Repeater          & FM           & SM4JDP        & Mora                &          434.8500 &          -2MHz & Carrier         &       QRV       & JP71GA           \\
-	Repeater          & D-Star       & SG4TYA        & Mora                &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JP71GE           \\
-	Link              & FM           &               & Nyhammar            &          145.4250 &                &                 &       QRV       & JP70LG           \\
-	Repeater          & FM           & SK4KO/R       & Orsa/Grönk.         &          145.7500 &        -600kHz & 1750            &       QRV       & JP71GF           \\
-	Repeater          & FM           & SK4KO/R       & Orsa/Grönk.         &          434.7500 &        -1,6MHz & 1750            &       QRV       & JP71GF           \\
-	Hotspot           & D-Star       & SG4AXQ        & Sunne               &          433.2000 &                & DV Carrier      &       QRV       & JO69NU           \\
-	Repeater          & FM           & SK4RJJ        & Sunne/Blåbärsk.     &          145.7750 &        -600kHz & 1750/74,4Hz$^1$ &       QRV       & JO69KU           \\
-	Repeater          & FM           & SK4ROI        & Särna               &          145.6750 &        -600kHz & 1750            &       QRV       & JP61NQ           \\
-	Link              & FM           & SK4RJJ        & Torsby/Hovfj.       &          145.2875 &                & 74,4Hz          &       QRV       & JO69LH           \\
-	Repeater          & FM           & SK4RPK        & Torsby/Valb.        &          434.6250 &          -2MHz & 1750Hz          &       QRV       & JP60LC           \\
-	Repeater          & D-Star       & SK4NI-C       & Tossebergsklätten   &          145.7625 &        -600kHz & DV Carrier      &       QRV       & JO69MX           \\
-	Repeater          & FM           & SK4WV/R       & Vansbro             &          145.6500 &        -600kHz & 1750 Hz         &       QRV       & JP70AM           \\
-	Repeater          & FM           & SK4WV/R       & Vansbro             &          434.6500 &        -1,6MHz & 1750            &       QRT       & JP70AM           \\
-	Repeater          & FM           & SK4RQF        & Årjäng              &          145.7250 &        -600kHz & 1750            &       QRV       & JO69BJ           \\
-	Repeater          & FM           & SK4BX/R       & Örebro              &          145.6500 &        -600kHz & 1750            &       QRV       & JO79OG
+	Repeater & FM           & SK4RWQ        & Arvika/Valfj.       &          434.7750 &          -2MHz & 1750            &       QRV       & JO69ES           \\
+	Repeater           & FM           & SK4UH/R       & Avesta              &          434.8500 &          -2MHz & 1750            &       QRV       & JP80CD           \\
+	Repeater           & FM           & SK4RVN        & Borlänge            &          434.8000 &          -2MHz & 74,4Hz          &       QRV       & JP70RL           \\
+	Hotspot            & D-Star       & SG4UZM-B      & Borlänge            &          434.5500 &     DV Carrier &                 &       QRV       & JP70RM           \\
+	Hotspot            & D-Star       & SG4YPG-B      & Borlänge            &          433.6000 &     DV Carrier &                 &       QRV       & JP70RM           \\
+	Repeater           & D-Star       & SK4BW-B       & Borlänge            &          434.9000 &          -2MHz & DV Carrier      &       QRV       & JP70RJ           \\
+	Hotspot            & D-Star       & SG4AXV-C      & Ekshärad            &          145.4250 &     DV Carrier &                 &       QRV       & JP60RE           \\
+	Repeater           & FM           & SK4AO/R       & Falun               &          145.6250 &        -600kHz & 1750            &       QRV       &  \\
+	Repeater           & FM           & SK4AO/R       & Falun               &          434.6250 &          -2MHz & 1750            &       QRV       & JP70TO           \\
+	Link               & FM           & SK4AV/R       & Filipstad/Klockarh. &          145.2000 &                & Carrier         &       QRV       & JO79CR           \\
+	Repeater           & FM           & SM4EFQ        & Filipstad/Storh.    &          145.7000 &        -600kHz & 1750            &       QRV       & JO79CR           \\
+	Hotspot            & D-Star       & SG4UOF-C      & Glanshammar         &          145.3375 &                & DV Carrier      &       QRV       & JO79RI           \\
+	Repeater           & FM           & SK4IL/R       & Grums               &          434.7250 &          -2MHz & 74,4Hz          &       QRV       & JO69NI           \\
+	Link               & FM           &               & Grängesberg         &          145.4500 &                &                 &       QRV       & JP70LG           \\
+	Repeater           & FM           & SK4HV/R       & Hagfors/Värmullsås. &          145.6750 &        -600kHz & 1750/114,8Hz    &       QRV       & JP60VA           \\
+	Link               & FM           & SK4RJJ        & Hagfors/Värmullsås. &          145.2250 &                & 74,4 Hz         &       QRV       & JP60UA           \\
+	Repeater           & FM           & SK4RKD        & Karlskoga           &          145.7500 &        -600kHz & Carrier         &       QRV       & JO79FJ           \\
+	Hotspot            & D-Star       & SG4BYH        & Karlstad            &          145.3875 &                & DV Carrier      &       QRV       & JO69RK           \\
+	Repeater           & FM           & SK4KS         & K-stad/Kronop.      &          434.8500 &          -2MHz & 1750            &       QRV       & JO69TJ           \\
+	Repeater           & FM           & SK4KIL        & Kil                 &          145.6250 &        -600kHz &                 &       QRV       & JO69QM           \\
+	Repeater           & D-Star       & SG4JPK        & Kil                 &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JO69PM           \\
+	Repeater           & FM           & SK4KIL        & Kil                 &          434.9250 &          -2MHz & 74,4 Hz         &      Plan       & JO69NO           \\
+	Repeater           & FM           & SK4EA/R       & Kopparberg          &          145.6000 &        -600kHz & 1750            &       QRV       & JP79MW           \\
+	Repeater           & FM           & SK4RWP        & Kristinehamn        &          434.7000 &          -2MHz & 1750            &       QRV       & JO79AH           \\
+	Repeater           & FM           & SK4RUV        & Leksand             &          145.7750 &        -600kHz & 1750/85,4Hz     &       QRV       & JP70KQ           \\
+	Repeater           & FM           & SK4EA/R       & Lindesberg          &          145.6875 &        -600kHz & 1750/74,4Hz     &       QRV       & JO79NP           \\
+	Repeater           & FM           & SK4DM/R       & Ludvika             &          145.7250 &        -600kHz & 1750            &       QRV       & JP70NC           \\
+	Repeater           & FM           & SK4DM/R       & Ludvika             &          434.7250 &        -1,6MHz & 1750/DTMF1      &       QRV       & JP70NC           \\
+	Repeater           & FM           & SM4JDP/R      & Mora                &          145.7000 &        -600kHz & 1750/118,8Hz    &       QRV       & JP71DA           \\
+	Repeater           & FM           & SM4JDP        & Mora                &          434.6750 &          -2MHz & 71,9Hz          &       QRV       & JP71GA           \\
+	Repeater           & FM           & SM4JDP        & Mora                &          434.8500 &          -2MHz & Carrier         &       QRV       & JP71GA           \\
+	Repeater           & D-Star       & SG4TYA        & Mora                &          145.5750 &        -600kHz & DV Carrier      &       QRV       & JP71GE           \\
+	Link               & FM           &               & Nyhammar            &          145.4250 &                &                 &       QRV       & JP70LG           \\
+	Repeater           & FM           & SK4KO/R       & Orsa/Grönk.         &          145.7500 &        -600kHz & 1750            &       QRV       & JP71GF           \\
+	Repeater           & FM           & SK4KO/R       & Orsa/Grönk.         &          434.7500 &        -1,6MHz & 1750            &       QRV       & JP71GF           \\
+	Hotspot            & D-Star       & SG4AXQ        & Sunne               &          433.2000 &                & DV Carrier      &       QRV       & JO69NU           \\
+	Repeater           & FM           & SK4RJJ        & Sunne/Blåbärsk.     &          145.7750 &        -600kHz & 1750/74,4Hz$^1$ &       QRV       & JO69KU           \\
+	Repeater           & FM           & SK4ROI        & Särna               &          145.6750 &        -600kHz & 1750            &       QRV       & JP61NQ           \\
+	Link               & FM           & SK4RJJ        & Torsby/Hovfj.       &          145.2875 &                & 74,4Hz          &       QRV       & JO69LH           \\
+	Repeater           & FM           & SK4RPK        & Torsby/Valb.        &          434.6250 &          -2MHz & 1750Hz          &       QRV       & JP60LC           \\
+	Repeater           & D-Star       & SK4NI-C       & Tossebergsklätten   &          145.7625 &        -600kHz & DV Carrier      &       QRV       & JO69MX           \\
+	Repeater           & FM           & SK4WV/R       & Vansbro             &          145.6500 &        -600kHz & 1750 Hz         &       QRV       & JP70AM           \\
+	Repeater           & FM           & SK4WV/R       & Vansbro             &          434.6500 &        -1,6MHz & 1750            &       QRT       & JP70AM           \\
+	Repeater           & FM           & SK4RQF        & Årjäng              &          145.7250 &        -600kHz & 1750            &       QRV       & JO69BJ           \\
+	Repeater           & FM           & SK4BX/R       & Örebro              &          145.6500 &        -600kHz & 1750/74.4Hz$^1$ &       QRV       & JO79LH
 \end{longtable}
 \begin{itemize}
 \item[$^1$] Kan även öppnas med DTMF 1
