Lade till saknade landsprefix

--- a/body.tex
+++ b/body.tex
@@ -57,30 +57,49 @@ Som suffix används följande:
 
 \subsection{Utländska signaler}
 
-Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla listan från ITU eller SSA för mer information.
+Det är svårare att veta exakt hur utländska signaler är uppbyggda. Eftersom denna handledning är för VHF/UHF tar vi inte med alla DXCC-signaler utan de som är närmast oss i Sverige. Konsultera den fulla DXCC-listan för mer information.
 
 \begin{center}
-\begin{tabular}{cl|cl}
-	\textbf{Signal} & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
-	   AMA--AOZ     & Spanien              &    C3A--C3Z     & Andorra               \\
-	   C4A--C4Z     & Cypern               &    DAA--DRZ     & Tyskland              \\
-	   EAA--EHZ     & Spanien              &    EIA--EJZ     & Irland                \\
-	   EKA--EKZ     & Armenien             &    EMA--EOZ     & Ukraina               \\
-	   EBA--ERZ     & Moldav.              &    ESA--ESZ     & Estland               \\
-	   EUA--EWZ     & Vitryssland          &    EXA--EXZ     & Ryssland              \\
-	   EYA--EYZ     & Tajikistan           &    EZA--EZZ     & Turkmenistan          \\
-	   FAA--FZZ     & Frankrike            &    GAA--GZZ     & Storbrittannien       \\
-	   HAA--HZZ     & Ungern               &    HBA--HBZ     & Schweiz               \\
-	   HEA--HEZ     & Schweiz              &    HFA--HFZ     & Polen                 \\
-	   HGA--HGZ     & Ungern               &    HVA--HVZ     & Vatikanen             \\
-	   HWA--HYZ     & Frankrike            &    H2A--H2Z     & Cypern                \\
-	   IAA--IZZ     & Italien              &    JWA--JXZ     & Norge                 \\
-	   J4A--J4Z     & Grekland             &    LAA--LNZ     & Norge                 \\
-	   LXA--LXZ     & Luxemburg            &    LYA--LYZ     & Litauen               \\
-	   LZA--LZZ     & Bulgarien            &    MAA--MZZ     & Storbrittannien       \\
-	   OEA--OEZ     & Österrike            &    OFA--OJZ     & Finland               \\
-	   OKA--OLZ     & Tjeckiska republiken &    OMA--OMZ     & Slovakiska republiken
-\end{tabular}
+\begin{longtable}{cl|cl}
+	   \textbf{Signal}    & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
+	\endhead
+	   AMA--AOZ & Spanien              &    C3A--C3Z     & Andorra               \\
+	      C4A--C4Z        & Cypern               &    DAA--DRZ     & Tyskland              \\
+	      EAA--EHZ        & Spanien              &    EIA--EJZ     & Irland                \\
+	      EKA--EKZ        & Armenien             &    EMA--EOZ     & Ukraina               \\
+	      EBA--ERZ        & Moldav.              &    ESA--ESZ     & Estland               \\
+	      EUA--EWZ        & Vitryssland          &    EXA--EXZ     & Ryssland              \\
+	      EYA--EYZ        & Tajikistan           &    EZA--EZZ     & Turkmenistan          \\
+	      FAA--FZZ        & Frankrike            &    GAA--GZZ     & Storbrittannien       \\
+	      HAA--HZZ        & Ungern               &    HBA--HBZ     & Schweiz               \\
+	      HEA--HEZ        & Schweiz              &    HFA--HFZ     & Polen                 \\
+	      HGA--HGZ        & Ungern               &    HVA--HVZ     & Vatikanen             \\
+	      HWA--HYZ        & Frankrike            &    H2A--H2Z     & Cypern                \\
+	      IAA--IZZ        & Italien              &    JWA--JXZ     & Norge                 \\
+	      J4A--J4Z        & Grekland             &    LAA--LNZ     & Norge                 \\
+	      LXA--LXZ        & Luxemburg            &    LYA--LYZ     & Litauen               \\
+	      LZA--LZZ        & Bulgarien            &    MAA--MZZ     & Storbrittannien       \\
+	      OEA--OEZ        & Österrike            &    OFA--OJZ     & Finland               \\
+	      OKA--OLZ        & Tjeckiska republiken &    OMA--OMZ     & Slovakiska republiken \\
+	      ONA--OTZ        & Belgien              &    OUA--OZZ     & Danmark               \\
+	      PAA--PIZ        & Nederländerna        &    P3A--P3Z     & Cypern                \\
+	      RAA--RZZ        & Ryska federationen   &    SAA--SMZ     & Sverige               \\
+	      SNA--SRZ        & Polen                &    TAA--TCZ     & Turkiet               \\
+	      TFA--TFZ        & Island               &    THA--THZ     & Frankrike             \\
+	      TKA--TKZ        & Frankrikte           &    TMA--TMZ     & Frankrike             \\
+	      TOA--TQZ        & Frankrike            &    TVA--TXZ     & Frankrike             \\
+	      T9A--T9Z        & Bosnien-Herzegovina  &    UAA--UIZ     & Ryska federationen    \\
+	      UJA--UMZ        & Uzbekistan           &    UNA--UQZ     & Kazakstan             \\
+	       URA-UTZ        & Ukraina              &    UUA--UZZ     & Ukraina               \\
+	      VPA--VSZ        & Storbritannien       &    XPA--XPZ     & Danmark               \\
+	      XXA--XXZ        & Portugal             &    YLA--YLZ     & Litauen               \\
+	      Y2A--Y9Z        & Tyskland             &    ZBA--ZJZ     & Storbritannien        \\
+	      ZNA--ZOZ        & Storbritannien       &    ZQA--ZQZ     & Storbritannien        \\
+	       2AA-2ZZ        & Storbritannien       &    3YA--3YZ     & Norge                 \\
+	      3ZA--3ZZ        & Polen                &    5BA--5BZ     & Cypern                \\
+	      5PA--5QZ        & Danmark              &    7SA--7SZ     & Sverige               \\
+	      8SA--8SZ        & Sverige              &    9AA--9AZ     & Kroatien
+\end{longtable}
 \end{center}
 
 \subsection{Distriktsiffror}
